使用 Colaboratory 建立

--- a/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
+++ b/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
@@ -6,7 +6,7 @@
       "name": "101 NumPy Exercises for Data Analysis (Python).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOaT5as4kz8PQx2o51GC359",
+      "authorship_tag": "ABX9TyMyvkd0cKErRVxXCbjwX2u1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,6 +256,47 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WQ4kPA5T552W"
+      },
+      "source": [
+        "# **7. How to reshape an array?**\n",
+        "Difficulty Level: L1\n",
+        "\n",
+        "Q. Convert a 1D array to a 2D array with 2 rows"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N1K0FPe259p1",
+        "outputId": "65c4c923-62b7-492e-99e3-33db51a2a0f4"
+      },
+      "source": [
+        "a=np.arange(10)\n",
+        "print(a,\"\\n\")\n",
+        "a=a.reshape(2,5)\n",
+        "print(a)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9] \n",
+            "\n",
+            "[[0 1 2 3 4]\n",
+            " [5 6 7 8 9]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
