--- a/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
+++ b/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
@@ -6,7 +6,7 @@
       "name": "101 NumPy Exercises for Data Analysis (Python).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMyvkd0cKErRVxXCbjwX2u1",
+      "authorship_tag": "ABX9TyMy9QVI9i7hdUk2vHe+QEyF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -254,7 +254,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -294,6 +294,142 @@
             "\n",
             "[[0 1 2 3 4]\n",
             " [5 6 7 8 9]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8RjAMJeT7PBc"
+      },
+      "source": [
+        "# **8. How to stack two arrays vertically?**\n",
+        "Difficulty Level: L2\n",
+        "Q. Stack arrays a and b vertically"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wLtDUOHA7Hoj",
+        "outputId": "e6362c72-61db-4595-fbba-1b67107aa849"
+      },
+      "source": [
+        "a=np.arange(10).reshape(2,5)\n",
+        "b=np.full((2,5),1)\n",
+        "print(a,\"\\n\")\n",
+        "print(b,\"\\n\")\n",
+        "print(np.vstack([a,b]))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2 3 4]\n",
+            " [5 6 7 8 9]] \n",
+            "\n",
+            "[[1 1 1 1 1]\n",
+            " [1 1 1 1 1]] \n",
+            "\n",
+            "[[0 1 2 3 4]\n",
+            " [5 6 7 8 9]\n",
+            " [1 1 1 1 1]\n",
+            " [1 1 1 1 1]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cZ7rITlB7HcU"
+      },
+      "source": [
+        "# **9. How to stack two arrays horizontally?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. Stack the arrays a and b horizontally."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uevqZefm7Ryc",
+        "outputId": "1d3df851-f2be-4bbe-d5ac-7170d69d54e7"
+      },
+      "source": [
+        "a=np.arange(10).reshape(2,5)\n",
+        "b=np.full((2,5),1)\n",
+        "print(a,\"\\n\")\n",
+        "print(b,\"\\n\")\n",
+        "print(np.hstack([a,b]))"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2 3 4]\n",
+            " [5 6 7 8 9]] \n",
+            "\n",
+            "[[1 1 1 1 1]\n",
+            " [1 1 1 1 1]] \n",
+            "\n",
+            "[[0 1 2 3 4 1 1 1 1 1]\n",
+            " [5 6 7 8 9 1 1 1 1 1]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CqsJpNxd_xco"
+      },
+      "source": [
+        "# **10. How to generate custom sequences in numpy without hardcoding?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. Create the following pattern without hardcoding. Use only numpy functions and the below input array a."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ra9SHRm6_1GY",
+        "outputId": "1d502a34-cda9-416f-f9e6-423181638659"
+      },
+      "source": [
+        "#np.repeat：复制的是多维数组的每一个元素\n",
+        "#np.tile：复制的是多维数组本身\n",
+        "a=np.arange(3)+1\n",
+        "print(a)\n",
+        "b=np.r_[np.repeat(a,3),np.tile(a,3)] #复制3次\n",
+        "#np.r_是按列连接两个矩阵，就是把两矩阵上下相加，要求列数相等，类似于pandas中的concat()。\n",
+        "#np.c_是按行连接两个矩阵，就是把两矩阵左右相加，要求行数相等，类似于pandas中的merge()。\n",
+        "print(b)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3]\n",
+            "[1 1 1 2 2 2 3 3 3 1 2 3 1 2 3 1 2 3]\n"
           ]
         }
       ]
