使用 Colaboratory 建立

--- a/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
+++ b/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
@@ -6,7 +6,7 @@
       "name": "101 NumPy Exercises for Data Analysis (Python).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMy9QVI9i7hdUk2vHe+QEyF",
+      "authorship_tag": "ABX9TyOmeXzbaoqlh6NKuk36wdhl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,9 +81,13 @@
       },
       "source": [
         "## **2. How to create a 1D array?**\n",
-        "Difficulty Level: L1\n",
+        "Difficulty Level: L1<br>\n",
         "\n",
-        "Q. Create a 1D array of numbers from 0 to 9"
+        "Q. Create a 1D array of numbers from 0 to 9 <br><br>\n",
+        "Desired output:\n",
+        "\n",
+        "\n",
+        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
     },
     {
@@ -129,25 +133,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2jhDIuTo0Ztb",
-        "outputId": "43042c58-4820-43fa-a26f-04b50882645a"
+        "outputId": "9f353ae9-cc5c-4c2a-a377-70417351dd54"
       },
       "source": [
         "a=np.ones((3,3),dtype=bool)\n",
-        "print(a,\"\\n\")\n",
+        "print(\"method1:\",a,\"\\n\")\n",
         "b=np.full((3,3),True,dtype=bool)\n",
-        "print(b)"
+        "print(\"method2:\",b)"
       ],
-      "execution_count": 5,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ True  True  True]\n",
+            "method1: [[ True  True  True]\n",
             " [ True  True  True]\n",
             " [ True  True  True]] \n",
             "\n",
-            "[[ True  True  True]\n",
+            "method2: [[ True  True  True]\n",
             " [ True  True  True]\n",
             " [ True  True  True]]\n"
           ]
@@ -163,7 +167,14 @@
         "# **4. How to extract items that satisfy a given condition from 1D array?**\n",
         "Difficulty Level: L1\n",
         "\n",
-        "Q. Extract all odd numbers from arr"
+        "Q. Extract all odd numbers from arr<br><br>\n",
+        "\n",
+        "\n",
+        "Input:\n",
+        "\n",
+        "arr = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])<br><br>\n",
+        "Desired output:<br>\n",
+        "array([1, 3, 5, 7, 9])"
       ]
     },
     {
@@ -173,7 +184,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q2rLrUC61FdI",
-        "outputId": "e35f2ac9-0cd9-47c6-da94-a251b44c7377"
+        "outputId": "c235a91d-5810-48d3-92a4-457f0f1db528"
       },
       "source": [
         "a=np.arange(10)\n",
@@ -181,7 +192,7 @@
         "a=a[a%2==1]\n",
         "print(a)"
       ],
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,9 +212,15 @@
       },
       "source": [
         "# **5. How to replace items that satisfy a condition with another value in numpy array?**\n",
-        "Difficulty Level: L1\n",
+        "Difficulty Level: L1<br>\n",
         "\n",
-        "Q. Replace all odd numbers in arr with -1"
+        "Q. Replace all odd numbers in arr with -1 <br><br>\n",
+        "Input:\n",
+        "\n",
+        "\n",
+        "arr = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])<br><br>\n",
+        "Desired Output:<br>\n",
+        "array([ 0, -1,  2, -1,  4, -1,  6, -1,  8, -1])"
       ]
     },
     {
@@ -243,19 +260,61 @@
         "# **6. How to replace items that satisfy a condition without affecting the original array?**\n",
         "Difficulty Level: L2\n",
         "\n",
-        "Q. Replace all odd numbers in arr with -1 without changing arr"
+        "Q. Replace all odd numbers in arr with -1 without changing arr\n",
+        "<br><br>Input:\n",
+        "\n",
+        "arr = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])<br><br>\n",
+        "Desired Output:\n",
+        "\n",
+        "out\n",
+        "array([ 0, -1,  2, -1,  4, -1,  6, -1,  8, -1])<br>\n",
+        "arr\n",
+        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Lxmc6rhf2YQa"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lxmc6rhf2YQa",
+        "outputId": "a080d3a1-bde1-45f7-a1b3-4fcc83715d91"
       },
       "source": [
-        ""
+        "print(\"錯誤:\")\n",
+        "a=np.arange(10)\n",
+        "out=a\n",
+        "out[out[out%2==1]]=-1\n",
+        "print(\"a=\",a)\n",
+        "print(\"out=\",out)\n",
+        "print(\"\\n\")\n",
+        "print(\"正確:\")\n",
+        "b=np.arange(10)\n",
+        "out=np.where(b%2==1,-1,b)\n",
+        "print(\"b=\",b)\n",
+        "print(\"out=\",out)\n",
+        "print(\"\\n\")"
       ],
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "錯誤:\n",
+            "a= [ 0 -1  2 -1  4 -1  6 -1  8 -1]\n",
+            "out= [ 0 -1  2 -1  4 -1  6 -1  8 -1]\n",
+            "\n",
+            "\n",
+            "正確:\n",
+            "b= [0 1 2 3 4 5 6 7 8 9]\n",
+            "out= [ 0 -1  2 -1  4 -1  6 -1  8 -1]\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -266,7 +325,16 @@
         "# **7. How to reshape an array?**\n",
         "Difficulty Level: L1\n",
         "\n",
-        "Q. Convert a 1D array to a 2D array with 2 rows"
+        "Q. Convert a 1D array to a 2D array with 2 rows<br><br>\n",
+        "Input:\n",
+        "\n",
+        "np.arange(10)\n",
+        "\n",
+        "array([ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9])<br><br>\n",
+        "Desired Output:<br>\n",
+        "\n",
+        "array([[0, 1, 2, 3, 4],<br>\n",
+        "[5, 6, 7, 8, 9]])"
       ]
     },
     {
@@ -305,8 +373,19 @@
       },
       "source": [
         "# **8. How to stack two arrays vertically?**\n",
-        "Difficulty Level: L2\n",
-        "Q. Stack arrays a and b vertically"
+        "Difficulty Level: L2<br>\n",
+        "Q. Stack arrays a and b vertically<br><br>\n",
+        "Input\n",
+        "\n",
+        "a = np.arange(10).reshape(2,-1)<br>\n",
+        "b = np.repeat(1, 10).reshape(2,-1)<br><br>\n",
+        "Desired Output:<br>\n",
+        "\n",
+        "\n",
+        "array([[0, 1, 2, 3, 4],<br>\n",
+        "  [5, 6, 7, 8, 9],<br>\n",
+        "  [1, 1, 1, 1, 1],<br>\n",
+        "  [1, 1, 1, 1, 1]])"
       ]
     },
     {
@@ -354,7 +433,16 @@
         "# **9. How to stack two arrays horizontally?**\n",
         "Difficulty Level: L2\n",
         "\n",
-        "Q. Stack the arrays a and b horizontally."
+        "Q. Stack the arrays a and b horizontally.<br><br>\n",
+        "Input<br>\n",
+        "\n",
+        "a = np.arange(10).reshape(2,-1)\n",
+        "\n",
+        "b = np.repeat(1, 10).reshape(2,-1)<br><br>\n",
+        "Desired Output:<br>\n",
+        "\n",
+        "array([[0, 1, 2, 3, 4, 1, 1, 1, 1, 1],<br>\n",
+        "[5, 6, 7, 8, 9, 1, 1, 1, 1, 1]])"
       ]
     },
     {
@@ -400,7 +488,15 @@
         "# **10. How to generate custom sequences in numpy without hardcoding?**\n",
         "Difficulty Level: L2\n",
         "\n",
-        "Q. Create the following pattern without hardcoding. Use only numpy functions and the below input array a."
+        "Q. Create the following pattern without hardcoding. Use only numpy functions and the below input array a.<br><br>\n",
+        "\n",
+        "Input:\n",
+        "\n",
+        "\n",
+        "a = np.array([1,2,3])<br><br>\n",
+        "Desired Output:<br>\n",
+        "\n",
+        "array([1, 1, 1, 2, 2, 2, 3, 3, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3])"
       ]
     },
     {
@@ -415,7 +511,7 @@
       "source": [
         "#np.repeat：复制的是多维数组的每一个元素\n",
         "#np.tile：复制的是多维数组本身\n",
-        "a=np.arange(3)+1\n",
+        "a=np.arange(3)\n",
         "print(a)\n",
         "b=np.r_[np.repeat(a,3),np.tile(a,3)] #复制3次\n",
         "#np.r_是按列连接两个矩阵，就是把两矩阵上下相加，要求列数相等，类似于pandas中的concat()。\n",
@@ -432,6 +528,73 @@
             "[1 1 1 2 2 2 3 3 3 1 2 3 1 2 3 1 2 3]\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YqZsu73pEqXm"
+      },
+      "source": [
+        "# **11. How to get the common items between two python numpy arrays?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. Get the common items between a and b\n",
+        " <br>  <br> \n",
+        "Input:\n",
+        "\n",
+        "a = np.array([1,2,3,2,3,4,3,4,5,6]) <br> \n",
+        "b = np.array([7,2,10,2,7,4,9,4,9,8]) <br><br>\n",
+        "\n",
+        "Desired Output:\n",
+        "\n",
+        "array([2, 4])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PIjIDjv5FdNF",
+        "outputId": "e5661776-4e10-4753-9b9c-673f7c527d85"
+      },
+      "source": [
+        "a=np.array([1,2,3,2,3,4,3,4,5,6]) #直接創list\n",
+        "b=np.array([7,2,10,2,7,4,9,4,9,8]) #直接創list\n",
+        "c=np.intersect1d(a,b)\n",
+        "print(c)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z4__-GBOJkCZ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LhVnWlNAJj1x"
+      },
+      "source": [
+        ""
       ]
     }
   ]
