--- a/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
+++ b/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
@@ -6,7 +6,7 @@
       "name": "101 NumPy Exercises for Data Analysis (Python).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOmeXzbaoqlh6NKuk36wdhl",
+      "authorship_tag": "ABX9TyPHGlrpFwFrRgPXBRbLiEWM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -563,7 +563,7 @@
       "source": [
         "a=np.array([1,2,3,2,3,4,3,4,5,6]) #直接創list\n",
         "b=np.array([7,2,10,2,7,4,9,4,9,8]) #直接創list\n",
-        "c=np.intersect1d(a,b)\n",
+        "c=np.intersect1d(a,b) #交集\n",
         "print(c)"
       ],
       "execution_count": 32,
@@ -578,23 +578,96 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "z4__-GBOJkCZ"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "LhVnWlNAJj1x"
       },
       "source": [
-        ""
+        "# **12. How to remove from one array those items that exist in another?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. From array a remove all items present in array b<br><br>\n",
+        "\n",
+        "Input:\n",
+        "\n",
+        "a = np.array([1,2,3,4,5])<br>\n",
+        "b = np.array([5,6,7,8,9])<br><br>\n",
+        "Desired Output:\n",
+        "\n",
+        "array([1,2,3,4])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VnFTK3O8L48v",
+        "outputId": "15897628-6af2-49b3-e771-a1d01afbb627"
+      },
+      "source": [
+        "a=np.array([1,2,3,4,5]) #直接創list\n",
+        "b=np.array([5,6,7,8,9]) #直接創list\n",
+        "c=np.setdiff1d(a,b) #差集\n",
+        "print(c)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cpbz3QWhMriN"
+      },
+      "source": [
+        "# **13. How to get the positions where elements of two arrays match?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "\n",
+        "Q. Get the positions where elements of a and b match<br><br>\n",
+        "\n",
+        "Input:\n",
+        "\n",
+        "a = np.array([1,2,3,2,3,4,3,4,5,6])<br>\n",
+        "b = np.array([7,2,10,2,7,4,9,4,9,8])<br><br>\n",
+        "Desired Output:\n",
+        "\n",
+        "(array([1, 3, 5, 7]),)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5v9ZBKNhMsD9",
+        "outputId": "e40d6572-a396-4a23-9165-26b906a0c70d"
+      },
+      "source": [
+        "a=np.array([1,2,3,2,3,4,3,4,5,6])\n",
+        "b=np.array([7,2,10,2,7,4,9,4,9,8])\n",
+        "c=np.where(a==b) #回傳arg\n",
+        "print(c)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(array([1, 3, 5, 7]),)\n"
+          ]
+        }
       ]
     }
   ]
