--- a/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
+++ b/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
@@ -6,7 +6,7 @@
       "name": "101 NumPy Exercises for Data Analysis (Python).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPHGlrpFwFrRgPXBRbLiEWM",
+      "authorship_tag": "ABX9TyMZpmm7esTFIuxWI4W597WS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,14 +56,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BWkVqjoZy8f8",
-        "outputId": "66c349e0-ea4a-41ed-c221-415bbbcbf3ab"
+        "outputId": "18160c73-5f21-4996-85d4-0d2a505f1e4c"
       },
       "source": [
         "import numpy as np\n",
         "\n",
         "print(np.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
         "a=np.arange(10)\n",
         "print(a)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "b=np.full((3,3),True,dtype=bool)\n",
         "print(\"method2:\",b)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,7 +192,7 @@
         "a=a[a%2==1]\n",
         "print(a)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
         "a[a[a%2==1]]=-1\n",
         "print(a)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,7 +296,7 @@
         "print(\"out=\",out)\n",
         "print(\"\\n\")"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +352,7 @@
         "a=a.reshape(2,5)\n",
         "print(a)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,7 +404,7 @@
         "print(b,\"\\n\")\n",
         "print(np.vstack([a,b]))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +461,7 @@
         "print(b,\"\\n\")\n",
         "print(np.hstack([a,b]))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,7 @@
         "#np.c_是按行连接两个矩阵，就是把两矩阵左右相加，要求行数相等，类似于pandas中的merge()。\n",
         "print(b)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,7 +566,7 @@
         "c=np.intersect1d(a,b) #交集\n",
         "print(c)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +612,7 @@
         "c=np.setdiff1d(a,b) #差集\n",
         "print(c)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,21 +651,65 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5v9ZBKNhMsD9",
-        "outputId": "e40d6572-a396-4a23-9165-26b906a0c70d"
+        "outputId": "fc1f20c7-bd14-4f21-b21b-5fc6642106a2"
       },
       "source": [
         "a=np.array([1,2,3,2,3,4,3,4,5,6])\n",
         "b=np.array([7,2,10,2,7,4,9,4,9,8])\n",
-        "c=np.where(a==b) #回傳arg\n",
-        "print(c)"
+        "index=np.where(a==b) #回傳index\n",
+        "print(index)"
       ],
-      "execution_count": 36,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "(array([1, 3, 5, 7]),)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SRFA2U3o7C32"
+      },
+      "source": [
+        "# **14. How to extract all numbers between a given range from a numpy array?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. Get all items between 5 and 10 from a.<br><br>\n",
+        "\n",
+        "Input:\n",
+        "\n",
+        "a = np.array([2, 6, 1, 9, 10, 3, 27])<br><br>\n",
+        "Desired Output:\n",
+        "\n",
+        "(array([6, 9, 10]),)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7uQboJXl7UE1",
+        "outputId": "ed1c3546-b6f6-47ed-d9eb-edc788e6d5cd"
+      },
+      "source": [
+        "a=np.array([2,6,1,9,10,3,27])\n",
+        "index=np.where((a>=5)&(a<=10))\n",
+        "print(a[index])\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 6  9 10]\n"
           ]
         }
       ]
