使用 Colaboratory 建立

--- a/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
+++ b/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
@@ -6,7 +6,7 @@
       "name": "101 NumPy Exercises for Data Analysis (Python).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMZpmm7esTFIuxWI4W597WS",
+      "authorship_tag": "ABX9TyMb8RYOzBWlIATsfe5UJ40m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,7 +137,8 @@
       },
       "source": [
         "a=np.ones((3,3),dtype=bool)\n",
-        "print(\"method1:\",a,\"\\n\")\n",
+        "print(\"method1:\",a)\n",
+        "print(\"\\n\")\n",
         "b=np.full((3,3),True,dtype=bool)\n",
         "print(\"method2:\",b)"
       ],
@@ -188,7 +189,8 @@
       },
       "source": [
         "a=np.arange(10)\n",
-        "print(a,\"\\n\")\n",
+        "print(a)\n",
+        "print(\"\\n\")\n",
         "a=a[a%2==1]\n",
         "print(a)"
       ],
@@ -234,7 +236,8 @@
       },
       "source": [
         "a=np.arange(10)\n",
-        "print(a,\"\\n\")\n",
+        "print(a)\n",
+        "print(\"\\n\")\n",
         "a[a[a%2==1]]=-1\n",
         "print(a)"
       ],
@@ -348,7 +351,8 @@
       },
       "source": [
         "a=np.arange(10)\n",
-        "print(a,\"\\n\")\n",
+        "print(a)\n",
+        "print(\"\\n\")\n",
         "a=a.reshape(2,5)\n",
         "print(a)"
       ],
@@ -701,7 +705,7 @@
       "source": [
         "a=np.array([2,6,1,9,10,3,27])\n",
         "index=np.where((a>=5)&(a<=10))\n",
-        "print(a[index])\n"
+        "print(a[index])"
       ],
       "execution_count": 8,
       "outputs": [
@@ -710,6 +714,429 @@
           "name": "stdout",
           "text": [
             "[ 6  9 10]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ml3yHD_PJTwr"
+      },
+      "source": [
+        "# **15. How to make a python function that handles scalars to work on numpy arrays?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. Convert the function maxx that works on two scalars, to work on two arrays.<br><br>\n",
+        "\n",
+        "Input:\n",
+        "\n",
+        "\n",
+        "def maxx(x, y):<br>\n",
+        "    \"\"\"Get the maximum of two items\"\"\"<br>\n",
+        "     &emsp;&emsp;&emsp;if x >= y:<br>\n",
+        "        &emsp;&emsp;&emsp;&emsp;&emsp;return <br>\n",
+        "    &emsp;&emsp;&emsp;else:<br>\n",
+        "        &emsp;&emsp;&emsp;&emsp;&emsp;return y<br>\n",
+        "\n",
+        "maxx(1, 5)<br>\n",
+        " 5<br><br>\n",
+        "Desired Output:\n",
+        "\n",
+        "a = np.array([5, 7, 9, 8, 6, 4, 5])<br>\n",
+        "b = np.array([6, 3, 4, 8, 9, 7, 1])<br>\n",
+        "pair_max(a, b)<br>\n",
+        "array([ 6.,  7.,  9.,  8.,  9.,  7.,  5.])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s-h2780TJUXi"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bAEzmmIkF371"
+      },
+      "source": [
+        "# **16. How to swap two columns in a 2d numpy array?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. Swap columns 1 and 2 in the array arr.<br><br>\n",
+        "\n",
+        "arr = np.arange(9).reshape(3,3)<br>\n",
+        "arr"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KntYLzhkF4fl",
+        "outputId": "d57983a0-f15c-4bee-fece-1c7edeca17ce"
+      },
+      "source": [
+        "a=np.arange(9).reshape(3,3)\n",
+        "print(a)\n",
+        "a[:,[2,1,0]]=a[:,[0,1,2]]  # 0,1,2 col 轉成 2,1,0 col\n",
+        "print(\"\\n\")\n",
+        "print(a)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n",
+            "\n",
+            "\n",
+            "[[2 1 0]\n",
+            " [5 4 3]\n",
+            " [8 7 6]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "APSMzDCwHjiD"
+      },
+      "source": [
+        "# 17. How to swap two rows in a 2d numpy array?\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. Swap rows 1 and 2 in the array arr:<br><br>\n",
+        "\n",
+        "arr = np.arange(9).reshape(3,3)<br>\n",
+        "arr"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JGV2nRU9Hj3z",
+        "outputId": "c53aab9d-1f4a-4b48-c762-e968947c17ab"
+      },
+      "source": [
+        "a=np.arange(9).reshape(3,3)\n",
+        "print(a)\n",
+        "a[[2,1,0],:]=a[[0,1,2],:]  # 0,1,2 row 轉成 2,1,0 row\n",
+        "print(\"\\n\")\n",
+        "print(a)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n",
+            "\n",
+            "\n",
+            "[[6 7 8]\n",
+            " [3 4 5]\n",
+            " [0 1 2]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a5DzIF3bIJcj"
+      },
+      "source": [
+        "# **18. How to reverse the rows of a 2D array?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. Reverse the rows of a 2D array arr."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bxkOFTEVIJxK",
+        "outputId": "c21a01dc-f698-41ad-a821-61149d1620b1"
+      },
+      "source": [
+        "a=np.arange(9).reshape(3,3)\n",
+        "print(a)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "b=np.flip(a,axis=0) # arr[start:end:stepsize] or np.flip(arr,axis=None)\n",
+        "print(b)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n",
+            "\n",
+            "\n",
+            "[[6 7 8]\n",
+            " [3 4 5]\n",
+            " [0 1 2]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "duaIRyyeJD8D"
+      },
+      "source": [
+        "# **19. How to reverse the columns of a 2D array?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "Q. Reverse the columns of a 2D array arr."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jPx3bKCpJFbK",
+        "outputId": "dbe70c69-84b3-4657-af14-5d9f33dc5b06"
+      },
+      "source": [
+        "a=np.arange(9).reshape(3,3)\n",
+        "print(a)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "b=np.flip(a,axis=1) # arr[start:end:stepsize] or np.flip(arr,axis=None)\n",
+        "print(b)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n",
+            "\n",
+            "\n",
+            "[[2 1 0]\n",
+            " [5 4 3]\n",
+            " [8 7 6]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zyF_t9FQAFNT"
+      },
+      "source": [
+        "# **20. How to create a 2D array containing random floats between 5 and 10?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "\n",
+        "Q. Create a 2D array of shape 5x3 to contain random decimal numbers between 5 and 10."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kIRcq1uBAOVT",
+        "outputId": "d07ffd94-e3ab-4bb5-cd25-2b828b09ecca"
+      },
+      "source": [
+        "a=np.random.rand(15).reshape(5,3)\n",
+        "a=5+(a*(10-5)) #線性內插法\n",
+        "print(a)\n",
+        "\n",
+        "print(\"\\n\")\n",
+        "b=np.random.randint(low=5,high=10,size=(5,3))+np.random.random((5,3))\n",
+        "print(b)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[7.86788142 9.6717887  8.18324668]\n",
+            " [7.50665503 6.78794406 8.09402581]\n",
+            " [8.32531744 5.91626399 9.68712925]\n",
+            " [6.35921462 7.13671232 9.81452011]\n",
+            " [6.13312408 7.88638474 5.37236507]]\n",
+            "\n",
+            "\n",
+            "[[7.21091675 8.09883054 8.85832404]\n",
+            " [6.72708105 8.17652195 6.04041001]\n",
+            " [7.23676067 9.20989881 8.66176394]\n",
+            " [5.37331636 8.2220575  8.79551312]\n",
+            " [7.94310443 5.86218297 7.9272815 ]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JpLqQ8EJLpmR"
+      },
+      "source": [
+        "# **21. How to print only 3 decimal places in python numpy array?**\n",
+        "Difficulty Level: L1\n",
+        "\n",
+        "Q. Print or show only 3 decimal places of the numpy array rand_arr.<br><br>\n",
+        "\n",
+        "Input:\n",
+        "\n",
+        "rand_arr = np.random.random((5,3))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HkF5bp7kLqDJ",
+        "outputId": "0fd0d9b7-0792-49da-a215-5b0e637b2cd5"
+      },
+      "source": [
+        "a=np.random.rand(15).reshape(5,3)\n",
+        "np.set_printoptions(suppress=False) \n",
+        "print(a)\n",
+        "print(\"\\n\")\n",
+        "np.set_printoptions(precision=3,suppress=True) #太小的supress掉,有.00或科學記號就忽略不計\n",
+        "print(a)\n",
+        "print(\"\\n\")\n",
+        "np.set_printoptions(formatter={'float': lambda x: \"{0:0.3f}\".format(x)}) #強制補到3位\n",
+        "print(a)"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.262 0.456 0.683]\n",
+            " [0.696 0.284 0.38 ]\n",
+            " [0.181 0.789 0.057]\n",
+            " [0.697 0.779 0.777]\n",
+            " [0.259 0.374 0.588]]\n",
+            "\n",
+            "\n",
+            "[[0.262 0.456 0.683]\n",
+            " [0.696 0.284 0.38 ]\n",
+            " [0.181 0.789 0.057]\n",
+            " [0.697 0.779 0.777]\n",
+            " [0.259 0.374 0.588]]\n",
+            "\n",
+            "\n",
+            "[[0.262 0.456 0.683]\n",
+            " [0.696 0.284 0.380]\n",
+            " [0.181 0.789 0.057]\n",
+            " [0.697 0.779 0.777]\n",
+            " [0.259 0.374 0.588]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qn3CsoZyQMl-"
+      },
+      "source": [
+        "# **22. How to pretty print a numpy array by suppressing the scientific notation (like 1e10)?**\n",
+        "Difficulty Level: L1\n",
+        "\n",
+        "Q. Pretty print rand_arr by suppressing the scientific notation (like 1e10)<br><br>\n",
+        "\n",
+        "Input:\n",
+        "\n",
+        "Create the random array<br>\n",
+        "np.random.seed(100)<br>\n",
+        "rand_arr = np.random.random([3,3])/1e3<br>\n",
+        "rand_arr\n",
+        "\n",
+        "array([[  5.434049e-04,   2.783694e-04,   4.245176e-04],<br>\n",
+        "        [  8.447761e-04,   4.718856e-06,   1.215691e-04],<br>\n",
+        "        [  6.707491e-04,   8.258528e-04,   1.367066e-04]])<br><br>\n",
+        "Desired Output:\n",
+        "\n",
+        "array([[ 0.000543,  0.000278,  0.000425],<br>\n",
+        "        [ 0.000845,  0.000005,  0.000122],<br>\n",
+        "        [ 0.000671,  0.000826,  0.000137]])<br>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-kGgMtNAQ3eG",
+        "outputId": "f809011d-ed45-489a-d5cc-89344a1e16bf"
+      },
+      "source": [
+        "a=np.random.rand(9).reshape(3,3)/1e3\n",
+        "np.set_printoptions(suppress=False) \n",
+        "print(a)\n",
+        "print(\"\\n\")\n",
+        "np.set_printoptions(precision=6,suppress=True) #太小的supress掉,有.00或科學記號就忽略不計\n",
+        "print(a)\n",
+        "print(\"\\n\")\n",
+        "np.set_printoptions(formatter={'float': lambda x: \"{0:0.6f}\".format(x)}) #強制補到6位\n",
+        "print(a)"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[4.905e-04 2.274e-04 2.544e-04]\n",
+            " [5.803e-05 4.344e-04 3.118e-04]\n",
+            " [6.963e-04 3.778e-04 1.796e-04]]\n",
+            "\n",
+            "\n",
+            "[[0.00049  0.000227 0.000254]\n",
+            " [0.000058 0.000434 0.000312]\n",
+            " [0.000696 0.000378 0.00018 ]]\n",
+            "\n",
+            "\n",
+            "[[0.000490 0.000227 0.000254]\n",
+            " [0.000058 0.000434 0.000312]\n",
+            " [0.000696 0.000378 0.000180]]\n"
           ]
         }
       ]
