使用 Colaboratory 建立

--- a/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
+++ b/101_NumPy_Exercises_for_Data_Analysis_(Python).ipynb
@@ -6,7 +6,7 @@
       "name": "101 NumPy Exercises for Data Analysis (Python).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMb8RYOzBWlIATsfe5UJ40m",
+      "authorship_tag": "ABX9TyNAHy9Mnrc7qKtcCljirOE+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1137,6 +1137,57 @@
             "[[0.000490 0.000227 0.000254]\n",
             " [0.000058 0.000434 0.000312]\n",
             " [0.000696 0.000378 0.000180]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vp8UMwbsUKcl"
+      },
+      "source": [
+        "# **23. How to limit the number of items printed in output of numpy array?**\n",
+        "Difficulty Level: L1\n",
+        "\n",
+        "Q. Limit the number of items printed in python numpy array a to a maximum of 6 elements.<br><br>\n",
+        "\n",
+        "\n",
+        "Input:\n",
+        "\n",
+        "a = np.arange(15)<br>\n",
+        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14])<br><br>\n",
+        "Desired Output:\n",
+        "\n",
+        "array([ 0,  1,  2, ..., 12, 13, 14])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MoFnNEdpULme",
+        "outputId": "0580260b-4866-4ae3-986c-e9830adfcbbc"
+      },
+      "source": [
+        "a=np.arange(15)\n",
+        "print(a)\n",
+        "print(\"\\n\")\n",
+        "np.set_printoptions(threshold=5) #會用...代替\n",
+        "print(a)"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+            "\n",
+            "\n",
+            "[ 0  1  2 ... 12 13 14]\n"
           ]
         }
       ]
