使用 Colaboratory 建立

--- a/101_Pandas_Exercises_for_Data_Analysis_(Python).ipynb
+++ b/101_Pandas_Exercises_for_Data_Analysis_(Python).ipynb
@@ -6,7 +6,7 @@
       "name": "101 Pandas Exercises for Data Analysis (Python).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOJvbyMpv4iP41zr8RaHHkP",
+      "authorship_tag": "ABX9TyPbR4Zi2n0eB5t2kqEkl3+i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "foQ_IGfQSOAx",
-        "outputId": "a4878db4-7d14-495a-9737-4716b7952eb7"
+        "outputId": "930f58da-0307-437f-e7e0-788e64fc6f28"
       },
       "source": [
         "import numpy as np\n",
@@ -303,7 +303,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U_1cXIef2SN8",
-        "outputId": "f0d6ee4d-a8e2-4e86-a11a-303d2d99961f"
+        "outputId": "84c38c22-336e-481b-c45d-29c5b2e1f321"
       },
       "source": [
         "ser1 = pd.Series(list('abcedfghijklmnopqrstuvwxyz'))\n",
@@ -316,6 +316,8 @@
         "df1=pd.concat([ser1, ser2], axis=1)\n",
         "print(df1)\n",
         "print(\"\\n\")\n",
+        "\n",
+        "#字典表示法\n",
         "df2=pd.DataFrame(\n",
         "        {\n",
         "          \"col1\":ser1,\n",
@@ -324,7 +326,7 @@
         ")\n",
         "print(df2)"
       ],
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,6 +447,119 @@
             "24    y    24\n",
             "25    z    25\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8hDRPcRSQuu9"
+      },
+      "source": [
+        "# **5. How to assign name to the series’ index?**\n",
+        "Difficulty Level: L1\n",
+        "\n",
+        "Give a name to the series ser calling it ‘alphabets’.<br><br>\n",
+        "\n",
+        "Input\n",
+        "\n",
+        "ser = pd.Series(list('abcedfghijklmnopqrstuvwxyz'))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5vcZxe0yQvK1",
+        "outputId": "e48b3b48-eead-4211-d06c-94c296944a00"
+      },
+      "source": [
+        "ser = pd.Series(list('abcedfghijklmnopqrstuvwxyz'))\n",
+        "ser.name='alphabets'\n",
+        "print(ser)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0     a\n",
+            "1     b\n",
+            "2     c\n",
+            "3     e\n",
+            "4     d\n",
+            "5     f\n",
+            "6     g\n",
+            "7     h\n",
+            "8     i\n",
+            "9     j\n",
+            "10    k\n",
+            "11    l\n",
+            "12    m\n",
+            "13    n\n",
+            "14    o\n",
+            "15    p\n",
+            "16    q\n",
+            "17    r\n",
+            "18    s\n",
+            "19    t\n",
+            "20    u\n",
+            "21    v\n",
+            "22    w\n",
+            "23    x\n",
+            "24    y\n",
+            "25    z\n",
+            "Name: alphabets, dtype: object\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8j3e2ZKQRsIU"
+      },
+      "source": [
+        "# **6. How to get the items of series A not present in series B?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "From ser1 remove items present in ser2.\n",
+        "\n",
+        "ser1 = pd.Series([1, 2, 3, 4, 5])<br>\n",
+        "ser2 = pd.Series([4, 5, 6, 7, 8])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hgCfLVJNRsdD",
+        "outputId": "a82e4cd9-6d4c-4400-c0f3-5cb23c2468cf"
+      },
+      "source": [
+        "ser1 = pd.Series([1, 2, 3, 4, 5])\n",
+        "ser2 = pd.Series([4, 5, 6, 7, 8])\n",
+        "ser1[~ser1.isin(ser2)] #isin=is in "
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    1\n",
+              "1    2\n",
+              "2    3\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     }
