--- a/101_Pandas_Exercises_for_Data_Analysis_(Python).ipynb
+++ b/101_Pandas_Exercises_for_Data_Analysis_(Python).ipynb
@@ -6,7 +6,7 @@
       "name": "101 Pandas Exercises for Data Analysis (Python).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPbR4Zi2n0eB5t2kqEkl3+i",
+      "authorship_tag": "ABX9TyOo5Um4R1SQubJ9Rd+aMsAn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -562,6 +562,322 @@
           "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Nx0ASDxqTIgb"
+      },
+      "source": [
+        "# **7. How to get the items not common to both series A and series B?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "\n",
+        "\n",
+        "Get all items of ser1 and ser2 not common to both.<br><br>\n",
+        "\n",
+        "Input\n",
+        "\n",
+        "ser1 = pd.Series([1, 2, 3, 4, 5])<br>\n",
+        "ser2 = pd.Series([4, 5, 6, 7, 8])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vou7mWy7TI1z",
+        "outputId": "17466a4c-cf5c-40c7-a2d4-c13fe5d0ed78"
+      },
+      "source": [
+        "ser_u = pd.Series(np.union1d(ser1, ser2))  # 結合numpy union\n",
+        "ser_i = pd.Series(np.intersect1d(ser1, ser2))  # 結合numpy intersect\n",
+        "print(ser_u)\n",
+        "print(\"\\n\")\n",
+        "print(ser_i)\n",
+        "print(\"\\n\")\n",
+        "ser_u[~ser_u.isin(ser_i)]"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    1\n",
+            "1    2\n",
+            "2    3\n",
+            "3    4\n",
+            "4    5\n",
+            "5    6\n",
+            "6    7\n",
+            "7    8\n",
+            "dtype: int64\n",
+            "\n",
+            "\n",
+            "0    4\n",
+            "1    5\n",
+            "dtype: int64\n",
+            "\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    1\n",
+              "1    2\n",
+              "2    3\n",
+              "5    6\n",
+              "6    7\n",
+              "7    8\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XQPt5vPiUOf6"
+      },
+      "source": [
+        "# **8. How to get the minimum, 25th percentile, median, 75th, and max of a numeric series?**\n",
+        "Difficuty Level: L2\n",
+        "\n",
+        "Compute the minimum, 25th percentile, median, 75th, and maximum of ser.<br><br>\n",
+        "\n",
+        "Input\n",
+        "\n",
+        "ser = pd.Series(np.random.normal(10, 5, 25))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t_UOisQNUPVR",
+        "outputId": "905c58b9-5b19-4e18-b730-95508be31410"
+      },
+      "source": [
+        "ser = pd.Series(np.random.normal(10, 5, 25))\n",
+        "print(ser)\n",
+        "print(\"\\n\")\n",
+        "print(ser.min())\n",
+        "print(ser.median())\n",
+        "print(ser.max())\n",
+        "print(\"\\n\")\n",
+        "print(np.percentile(ser,[0,25,50,75,100])) # 結合numpy percentile"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0      9.474632\n",
+            "1      3.323937\n",
+            "2      4.932961\n",
+            "3      9.021201\n",
+            "4     13.034748\n",
+            "5      4.061385\n",
+            "6      6.452198\n",
+            "7      4.478376\n",
+            "8     12.727458\n",
+            "9     11.625934\n",
+            "10     6.044956\n",
+            "11    12.730805\n",
+            "12     4.185546\n",
+            "13    12.600429\n",
+            "14     1.708842\n",
+            "15     1.742103\n",
+            "16     9.215212\n",
+            "17    12.086126\n",
+            "18     8.829092\n",
+            "19    20.245458\n",
+            "20    10.610033\n",
+            "21    18.814137\n",
+            "22     8.008287\n",
+            "23     7.421621\n",
+            "24    -4.982349\n",
+            "dtype: float64\n",
+            "\n",
+            "\n",
+            "-4.982349343370458\n",
+            "8.829091670330252\n",
+            "20.24545847044358\n",
+            "\n",
+            "\n",
+            "[-4.98234934  4.47837579  8.82909167 12.08612648 20.24545847]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GbylNGlFVnEx"
+      },
+      "source": [
+        "# **9. How to get frequency counts of unique items of a series?**\n",
+        "Difficulty Level: L1\n",
+        "\n",
+        "Calculte the frequency counts of each unique value ser.<br><br>\n",
+        "\n",
+        "Input\n",
+        "\n",
+        "ser = pd.Series(np.take(list('abcdefgh'), np.random.randint(8, size=30)))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RL1GBHwzVnf4",
+        "outputId": "c36bfe9d-709d-48a5-c44c-21709d1e83d2"
+      },
+      "source": [
+        "ser = pd.Series(np.take(list('abcdefgh'), np.random.randint(8, size=30)))\n",
+        "print(ser.value_counts())"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "c    8\n",
+            "f    5\n",
+            "g    5\n",
+            "e    4\n",
+            "d    3\n",
+            "h    2\n",
+            "b    2\n",
+            "a    1\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PACC0f8oW0y_"
+      },
+      "source": [
+        "# **10. How to keep only top 2 most frequent values as it is and replace everything else as ‘Other’?**\n",
+        "Difficulty Level: L2\n",
+        "\n",
+        "From ser, keep the top 2 most frequent items as it is and replace everything else as ‘Other’.<br><br>\n",
+        "\n",
+        "\n",
+        "Input\n",
+        "\n",
+        "np.random.RandomState(100)<br>\n",
+        "ser = pd.Series(np.random.randint(1, 5, [12]))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yZIZ6x_SW1oX",
+        "outputId": "dd58491a-55a7-4afc-fa22-f741796e9439"
+      },
+      "source": [
+        "#np.random.RandomState(100)\n",
+        "ser = pd.Series(np.random.randint(1, 10, [20]))\n",
+        "print(ser)\n",
+        "print(\"\\n\")\n",
+        "print(\"Top 2 Freq:\\n\", ser.value_counts())\n",
+        "ser[~ser.isin(ser.value_counts().index[:2])] = 'Other'\n",
+        "print(ser)"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0     3\n",
+            "1     8\n",
+            "2     6\n",
+            "3     8\n",
+            "4     3\n",
+            "5     4\n",
+            "6     9\n",
+            "7     6\n",
+            "8     6\n",
+            "9     6\n",
+            "10    9\n",
+            "11    3\n",
+            "12    3\n",
+            "13    1\n",
+            "14    1\n",
+            "15    1\n",
+            "16    3\n",
+            "17    5\n",
+            "18    9\n",
+            "19    9\n",
+            "dtype: int64\n",
+            "\n",
+            "\n",
+            "Top 2 Freq:\n",
+            " 3    5\n",
+            "9    4\n",
+            "6    4\n",
+            "1    3\n",
+            "8    2\n",
+            "5    1\n",
+            "4    1\n",
+            "dtype: int64\n",
+            "0         3\n",
+            "1     Other\n",
+            "2     Other\n",
+            "3     Other\n",
+            "4         3\n",
+            "5     Other\n",
+            "6         9\n",
+            "7     Other\n",
+            "8     Other\n",
+            "9     Other\n",
+            "10        9\n",
+            "11        3\n",
+            "12        3\n",
+            "13    Other\n",
+            "14    Other\n",
+            "15    Other\n",
+            "16        3\n",
+            "17    Other\n",
+            "18        9\n",
+            "19        9\n",
+            "dtype: object\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "puBv_cu6X_0J"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
